# sage

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: docs.yml  release.yml
Formula/: sage.rb
crates/sage-checker/: Cargo.toml
crates/sage-checker/src/: checker.rs  error.rs  lib.rs  scope.rs  types.rs
crates/sage-cli/: Cargo.toml
crates/sage-cli/src/: main.rs
crates/sage-codegen/: Cargo.toml
crates/sage-codegen/src/: emit.rs  generator.rs  lib.rs
crates/sage-lexer/: Cargo.toml
crates/sage-lexer/src/: token.rs
crates/sage-loader/: Cargo.toml
crates/sage-loader/src/: error.rs  lib.rs  manifest.rs  tree.rs
crates/sage-mcp/: Cargo.toml
crates/sage-mcp/src/: client.rs  config.rs  error.rs  http.rs  jsonrpc.rs  lib.rs  pool.rs  stdio.rs  tool_client.rs  transport.rs
crates/sage-package/src/: cache.rs  dependency.rs  error.rs  lib.rs  lock.rs  resolver.rs
crates/sage-package/tests/: integration.rs
crates/sage-parser/: Cargo.toml
crates/sage-parser/src/: ast.rs  formatter.rs  hints.rs  lib.rs  parser.rs  token.rs
crates/sage-persistence/: Cargo.toml
crates/sage-persistence/src/: error.rs  file.rs  lib.rs  postgres.rs  sqlite.rs
crates/sage-playground-engine/: Cargo.toml
crates/sage-playground-engine/src/: interp.rs  lib.rs
crates/sage-runtime/: Cargo.toml
crates/sage-runtime-web/: Cargo.toml
crates/sage-runtime-web/src/: lib.rs
crates/sage-runtime/src/: agent.rs  error.rs  lib.rs  llm.rs  mock.rs  persistence.rs  supervisor.rs  tracing.rs
crates/sage-runtime/src/persistence/: mod.rs
crates/sage-runtime/src/stdlib/: mcp.rs  mod.rs  time.rs
crates/sage-runtime/src/tools/: database.rs  filesystem.rs  http.rs  mod.rs  shell.rs
crates/sage-sense/: Cargo.toml
crates/sage-sense/src/: analysis.rs  store.rs
crates/sage-types/: Cargo.toml
crates/sage-types/src/: ty.rs
docs/: RFC-0002-project-structure.md  RFC-0004-precompiled-runtime.md  RFC-0005-user-defined-types.md  RFC-0012-testing-framework.md  RFC-0013-standard-library.md  RFC-0014-lsp-support.md  VISION.md
examples/: observability.sg  persistence.sg  playground.html  research.sg  supervision.sg  two_agents.sg  wasm_counter.sg  wasm_divine.sg  wasm_fetch.sg  wasm_hello.sg
examples/mcp_devops/: grove.toml
examples/mcp_devops/src/: main.sg
guide/src/getting-started/: installation.md
scripts/: build-toolchain.sh
tests/: generics_test.sg  lifecycle_test.sg  mcp_test.sg  persistence_test.sg  span_test.sg  supervision_test.sg
tests/docker/: Dockerfile.local  Dockerfile.ubuntu-clean  test-install.sh  test-sage.sh
