[package]
name = "sage-runtime-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM platform layer for the Sage runtime"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window"] }
js-sys = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-time = "1"
console_error_panic_hook = "0.1"

[lints]
workspace = true
