[package]
name = "sage-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime library for compiled Sage programs"

[features]
default = []
database = ["sqlx"]
# Persistence backends for @persistent fields
persistence-sqlite = ["sage-persistence/sqlite"]
persistence-postgres = ["sage-persistence/postgres"]
persistence-file = ["sage-persistence/file"]

[dependencies]
# Cross-platform: tokio sync primitives work on both native and wasm32
tokio = { version = "1", features = ["sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3"

# Native-only: full tokio runtime, persistence, sqlx
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sage-persistence = { path = "../sage-persistence", version = "2.1.0", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite"], optional = true }

# WASM-only: browser platform layer
[target.'cfg(target_arch = "wasm32")'.dependencies]
sage-runtime-web = { path = "../sage-runtime-web", version = "2.1.0" }
wasm-bindgen-futures = "0.4"
web-time = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
